# task-picker

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  about.hbs  about.toml  index.html  merge-request-checks.sh  release.toml  test_coverage.sh  third-party-licenses.html
.github/workflows/: code_coverage.yml  release.yml  rust.yml
assets/: sw.js
src/: app.rs  lib.rs  main.rs  sources.rs  tasks.rs
src/app/: tests.rs
src/sources/: caldav.rs  github.rs  gitlab.rs  openproject.rs
src/sources/caldav/: tests.rs
src/sources/openproject/: tests.rs
