[package]
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
description = "Task Picker helps you to keep an overview about tasks from different task trackers, like GitHub or CalDAV."
edition = "2021"
license = "GPL-3.0-or-later"
name = "task-picker"
repository = "https://github.com/thomaskrause/task-picker"
rust-version = "1.65"
version = "0.3.0"

[dependencies]
anyhow = {version = "1"}
eframe = {version = "0.21.0", default-features = false, features = [
  "accesskit", # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow", # Use the glow rendering backend. Alternative: "wgpu".
  "persistence", # Enable restoring app state when restarting the app.
  "wayland",
]}
egui = { version="0.21.0" }
egui-notify = "0.6"
itertools = "0.10"
minicaldav = "0.7"
rayon = "1.7.0"
ureq = "2.5"
url = "2"
egui-phosphor = "0.1.0"

# You only need serde if you want app persistence:
chrono = {version = "0.4.24", default-features = false, features = ["std", "clock", "serde"]}
ellipse = {version = "0.2.0"}
json = "0.12.4"
log = "0.4.17"
serde = {version = "1", features = ["derive"]}

# native:
image = "0.24.5"
tracing-subscriber = "0.3"

mockall_double = "0.3"

[patch.crates-io]
egui = { git = "https://github.com/thomaskrause/egui.git", branch="feature/wayland-app-id" }
eframe = { git = "https://github.com/thomaskrause/egui.git", branch="feature/wayland-app-id" }

[dev-dependencies]
visual-hash = "3"
mockall = "0.11"
egui_skia = {version="0.3.0", features=["cpu_fix"]}
skia-safe = "0.62.0"
tempfile = "3"

[[bin]]
name = "taskpicker"

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# The installers to generate for each app
installers = []
